--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta prefix="og: http://ogp.me/ns#"  property="og:image" content="https://cdn0.iconfinder.com/data/icons/PRACTIKA/256/portfolio.png"/>
+    <meta prefix="og: http://ogp.me/ns#"  property="og:image:type" content="image/png"/>
+    <meta prefix="og: http://ogp.me/ns#"  property="og:image:width" content="300"/>
+    <met prefix="og: http://ogp.me/ns#"  property="og:image:height" content="300"/>
+    <meta prefix="og: http://ogp.me/ns#"  property="og:url" content="https://jf2028mp.github.io/portfolio/"/>
+    <meta prefix="og: http://ogp.me/ns#"  property="og:title" content="Jeffry Martinez Perez" />
+    <meta prefix="og: http://ogp.me/ns#"  property="og:description" content="Personal portfolio about my projects" />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is added to the
